deploy: 6068f4820998de4022d2e753cc679bdec259cca2

--- a/web/unseping/index.html
+++ b/web/unseping/index.html
@@ -1333,7 +1333,7 @@
 <blockquote>
 <p>江苏工匠杯</p>
 </blockquote>
-<p><img alt="" src="https://raw.githubusercontent.com/CTF-USTB/Panic404-wp-images/main/images/20251001153644034.png" /></p>
+<p><img alt="" src="https://cdn.jsdelivr.net/gh/CTF-USTB/Panic404-wp-images/images/20251001153644034.png" /></p>
 <hr />
 <p><code>waf()</code> 函数过滤了 <code>|</code>、<code>&amp;</code>、<code>;</code>、<code>[sapce]</code>、<code>/</code>、<code>cat</code>、<code>flag</code>、<code>tac</code>、<code>php</code>、<code>ls</code></p>
 <p>shell中可以使用 <code>l''s</code> 绕过 <code>ls</code>，使用 <code>${IFS}</code> 绕过空格</p>
