deploy: a01509ca5b4dd0e179f0f8210f5092ed67e9f817

--- a/reverse/山东省大学生网络安全技能大赛-rev/index.html
+++ b/reverse/山东省大学生网络安全技能大赛-rev/index.html
@@ -1642,6 +1642,9 @@
         <span class="k">pass</span>
 <span class="c1">#flag{Th1s_1s_My_S1mpl3_Fl4g_f0r_CTF}</span>
 </code></pre></div></td></tr></table></div>
+<p style="text-align: right;">
+by. Huaji
+</p>
 
 
 
