--- a/web/封神台/index.html
+++ b/web/封神台/index.html
@@ -1539,6 +1539,9 @@
 <p><img alt="image-20250810232357014" src="https://cdn.jsdelivr.net/gh/CTF-USTB/Panic404-wp-images/images/20251005192849243.png" /></p>
 <p>访问 flag 所在 encoding，拿到 flag：</p>
 <p><img alt="image-20250810232917139" src="https://cdn.jsdelivr.net/gh/CTF-USTB/Panic404-wp-images/images/20251005192849244.png" /></p>
+<p style="text-align: right;">
+by. Huaji
+</p>
 
 
 
