--- a/web/山东省大学生网络安全技能大赛-web/index.html
+++ b/web/山东省大学生网络安全技能大赛-web/index.html
@@ -1486,6 +1486,9 @@ flag<span class="o">{</span>2b85a02b4f6d0f49ca05f766c68ff506<span class="o">}</s
 <span class="p">}</span>
 <span class="nb">file_put_contents</span><span class="p">(</span><span class="nv">$data</span><span class="p">,</span><span class="nb">file_get_contents</span><span class="p">(</span><span class="nv">$data</span><span class="p">));</span>
 </code></pre></div></td></tr></table></div>
+<p style="text-align: right;">
+by. Huaji
+</p>
 
 
 
